name:                Vihs
version:             0.1.0.0
synopsis:            Vim like Text editor by Haskell.
description:         Vim like Text editor by Haskell.
homepage:            https://github.com/Tatsuki-I/Vihs#readme
license:             Apache-2.0
license-file:        LICENSE.md
author:              Tatsuki-I
maintainer:          Tatsuki-I <tatsuki.devel@gmail.com>
copyright:           2017 Tatsuki-I
category:            Editor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ed
                     , Command
                     , Insert
                     , ReadWrite
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , haskeline
  default-language:    Haskell2010

executable vihs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Vihs
  default-language:    Haskell2010

test-suite Vihs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Vihs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tatsuki-I/Vihs
